v3.44.10 Bug fix for horizontal scrolling of tables.

--- a/src/app/admin/roles/layout.module.css
+++ b/src/app/admin/roles/layout.module.css
@@ -10,6 +10,6 @@
 /* ====================================================================== */
 @media (max-width: 992px) {
   .wrapper {
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
   }
 }
