--- a/src/components/Table/TableCommon.module.css
+++ b/src/components/Table/TableCommon.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  overflow: hidden;
+  width: 100%;
+}
 .wrapper__wide {
   overflow-x: auto;
 }
